Added image, tried to add responsive menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
 
-        <div class="header">
+        <div class="header" id = "fadeIn">
+            <div class="menu-btn">
+             <div class="menu-btn_burger"></div>
+            </div>
             <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -47,6 +50,6 @@
 
     </section>
 
-
+    <script src="js/javascript.js"></script>
 </body>
 </html>
